# MARVIN

./: Dockerfile  README.md
catkin_ws_realsense_gazebo/: Readme.m
catkin_ws_vehiculo/: Readme.m
catkin_ws_vehiculo/src/vehiculo_urdf_v2/vehicle_description/: CMakeLists.txt
catkin_ws_vehiculo/src/vehiculo_urdf_v2/vehicle_description/launch/: display.launch
catkin_ws_vehiculo/src/vehiculo_urdf_v2/vehicle_description/meshes/: link_front_wheel_left.STL  link_front_wheel_right.STL
catkin_ws_vehiculo/src/vehiculo_urdf_v2/vehicle_description/urdf/: vehiculo_urdf_v2.urdf
catkin_ws_vehiculo/src/vehiculo_urdf_v2/vehicle_gazebo/config/: vehicle_joint_ctrlr_params.yaml
catkin_ws_vehiculo/src/vehiculo_urdf_v2/vehicle_gazebo/worlds/: track1.world
chappy_control/: README.md
chappy_description/launch/: vehicle.launch
chappy_description/meshes/: link_back_wheel_right.STL  link_front_handling_right.STL
chappy_description/urdf/: vehiculo_macros.xacro  vehiculo_urdf_v2.csv
chappy_gazebo/launch/: vehicle.launch
chappy_gazebo/models/track1/: model.config  model.sdf
chappy_gazebo/models/track2/: model.sdf  track2.urdf
chappy_gazebo/src/: odom_broadcaster.cpp
chappy_gazebo/worlds/: track2.world
jetsoncar/: Readme.m
ldlidar_ros_ws/: Readme.m
marvin_real/: README.md
marvin_real/src/marvincar_ctrl/: setup.py
marvin_real/src/marvincar_nav/: setup.cfg  setup.py
marvin_sim/: README.md
marvin_sim/src/marvin_description/urdf/: marvin.urdf.xacro
marvin_sim_gazebo/worlds/: small_city.world
marvin_sim_ws/install/: local_setup.sh  setup.sh
marvin_sim_ws/install/marvin/share/marvin/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
marvin_sim_ws/install/marvin/share/marvin/cmake/: marvinConfig-version.cmake  marvinConfig.cmake
marvin_sim_ws/install/marvin/share/marvin/environment/: ament_prefix_path.dsv  path.dsv
marvin_sim_ws/install/marvin_description/share/marvin_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
marvin_sim_ws/install/marvin_description/share/marvin_description/cmake/: marvin_descriptionConfig-version.cmake  marvin_descriptionConfig.cmake
marvin_sim_ws/install/marvin_navigation/share/marvin_navigation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
marvin_sim_ws/install/marvin_sim_bringup/share/marvin_sim_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
marvin_sim_ws/install/marvin_sim_gazebo/share/marvin_sim_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
marvin_sim_ws/log/: latest_build
marvin_sim_ws/src/marvin_description/urdf/: marvin.urdf.xacro
marvin_sim_ws/src/marvin_sim_gazebo/launch/: gazebo_spawn.launch.py
marvin_sim_ws/src/marvin_sim_gazebo/worlds/: lab_track.world  track_lab.dae
marvin_ws/src/marvincar_bringup/: setup.py
marvin_ws/src/marvincar_nav/launch/: mapping_launch.py  navigation_dwa_launch.py
src/marvin_description/launch/: description.launch.py
src/marvin_gazebo/launch/: gazebo.launch.py
src/marvin_navigation/launch/: slam.launch.py
vehicle_description/: package.xml
vehicle_description/launch/: gazebo.launch
vehicle_description/meshes/: link_back_wheel_left.STL  link_camera_left.STL  link_camera_right.STL  link_front_handling_left.STL  link_lidar.STL  link_realsense.STL
vehicle_description/urdf/: vehiculo.urdf.xacro  vehiculo_gazebo.xacro
vehicle_gazebo/: CMakeLists.txt  package.xml
vehicle_gazebo/config/: ekf.yaml  vehicle_ackermann_ctrlr_params.yaml
vehicle_gazebo/models/track1/: track1.urdf
vehicle_gazebo/models/track1/meshes/: track1.dae
vehicle_gazebo/models/track2/: model.config
vehicle_gazebo/models/track2/meshes/: track2.dae
vehicle_gazebo/scripts/: cmd_vel_to_ackermann_drive
vehicle_gazebo/worlds/: track.world
vision/realsense_description/: README.md
(+66 files in other folders)
