<?xml version="1.0"?>
<package format="2">
  <name>vehicle_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for vehiculo_urdf_v2</p>
    <p>This package contains configuration data, 3D models and launch files
for vehiculo_urdf_v2 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>hector_models</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>xacro</build_depend>
  <export>

  </export>
</package>